# shuup-onboarding-os

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
shuup_onboarding/: __init__.py  apps.py  base.py  middleware.py  onboard.py  settings.py  storage.py  urls.py
shuup_onboarding/admin/: __init__.py  views.py
shuup_onboarding/templates/shuup_onboarding/admin/: macros.jinja  onboard.jinja
shuup_onboarding_tests/: settings.py  test_app.py
